# plugins

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  rabbitmq_worker.cpp  task.cpp  task.h
src/: Container.cpp  Container.h  LoggerCSV.hpp  SimplePocoHandler.cpp  SimplePocoHandler.h  Sota.cpp  Sota.h  Task.cpp  Task.h  macros.h  main.cpp  rabbitmq_worker.cpp  rabbitmq_worker.hpp  task.cpp  task.h
